--- a/package.json
+++ b/package.json
@@ -8,8 +8,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.1.2",
+    "@emotion/styled": "^11.0.0",
+    "axios": "^0.21.0",
+    "dayjs": "^1.9.7",
+    "emotion-reset": "^2.0.7",
+    "formik": "^2.2.5",
     "next": "10.0.3",
+    "query-string": "^6.13.7",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-query": "^2.26.4",
+    "react-spinners": "^0.9.0",
+    "use-query-params": "^1.1.9"
   }
 }
