--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "query-string": "^6.13.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-masonry-css": "^1.0.14",
     "react-query": "^2.26.4",
     "react-spinners": "^0.9.0",
     "use-query-params": "^1.1.9"
